--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -65,142 +65,16 @@ p, a {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 .header {
   background-image: url(../../img/png/header-bg.png);
   height: 100vh;
   -webkit-background-size: cover;
           background-size: cover;
   background-position: center;
-}
-
-.header .nav {
-  padding: 20px 0;
-}
-
-.header .nav .logo {
-  left: -15px;
-}
-
-.header .nav-list {
-  position: relative;
-}
-
-.header .nav-list__link {
-  color: white;
-  font-size: 18px;
-  font-weight: 400;
-  text-decoration: none;
-}
-
-.header .nav-list::before {
-  content: '';
-  position: absolute;
-  width: 0;
-  height: 2px;
-  -webkit-border-radius: 50%;
-          border-radius: 50%;
-  top: 100%;
-  left: 50%;
-  -webkit-transition: .3s all;
-  -o-transition: .3s all;
-  transition: .3s all;
-  -webkit-transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
-          transform: translateX(-50%);
-  background: #fff;
-}
-
-.header .nav-list:hover::before {
-  width: 100%;
-}
-
-.header .nav-list:hover:last-child::before {
-  width: 0;
-}
-
-.header .nav .lang {
-  color: #fff;
-  font-size: 18px;
-  width: 45px;
-  height: 40px;
-  -webkit-border-radius: 50%;
-          border-radius: 50%;
-  border: 2px solid #fff;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  position: relative;
-  -webkit-transition: .3s all;
-  -o-transition: .3s all;
-  transition: .3s all;
-  cursor: pointer;
-}
-
-.header .nav .lang-menu {
-  position: absolute;
-  top: 80%;
-  left: -2px;
-  width: 45px;
-  height: auto;
-  z-index: 10;
-  border: 1px solid #fff;
-  text-align: center;
-  margin: 0;
-  -webkit-border-radius: 40px;
-          border-radius: 40px;
-  -webkit-border-top-left-radius: 0;
-          border-top-left-radius: 0;
-  -webkit-border-top-right-radius: 0;
-          border-top-right-radius: 0;
-  border-top: none;
-  overflow: hidden;
-  -webkit-transition: .3s all;
-  -o-transition: .3s all;
-  transition: .3s all;
-  opacity: 0;
-  z-index: -2;
-}
-
-.header .nav .lang-item {
-  color: #191a40;
-  text-decoration: none;
-}
-
-.header .nav .lang li {
-  padding: 0;
-}
-
-.header .nav .lang li:hover {
-  background: #fff;
-}
-
-.header .nav .lang li:last-child {
-  -webkit-border-bottom-left-radius: 20px;
-          border-bottom-left-radius: 20px;
-  -webkit-border-bottom-right-radius: 20px;
-          border-bottom-right-radius: 20px;
-}
-
-.header .nav .borderBottom {
-  -webkit-border-bottom-left-radius: 0;
-          border-bottom-left-radius: 0;
-  -webkit-border-bottom-right-radius: 0;
-          border-bottom-right-radius: 0;
-}
-
-.header .nav .showLangMenu {
-  opacity: 1;
-  z-index: 10;
-  top: 100%;
 }
 
 .header .menu-burger {
@@ -349,12 +223,166 @@ p, a {
   fill: #fff;
 }
 
+.lang {
+  color: #fff;
+  font-size: 18px;
+  min-width: 45px;
+  min-height: 40px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  border: 2px solid #fff;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+  -webkit-transition: .3s all;
+  -o-transition: .3s all;
+  transition: .3s all;
+  cursor: pointer;
+}
+
+.lang-menu {
+  position: absolute;
+  top: 80%;
+  left: -2px;
+  width: 45px;
+  height: auto;
+  z-index: 10;
+  border: 1px solid #fff;
+  text-align: center;
+  margin: 0;
+  -webkit-border-radius: 40px;
+          border-radius: 40px;
+  -webkit-border-top-left-radius: 0;
+          border-top-left-radius: 0;
+  -webkit-border-top-right-radius: 0;
+          border-top-right-radius: 0;
+  border-top: none;
+  overflow: hidden;
+  -webkit-transition: .3s all;
+  -o-transition: .3s all;
+  transition: .3s all;
+  opacity: 0;
+  z-index: -2;
+  -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+          box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
+.lang-item {
+  color: #191a40;
+  text-decoration: none;
+}
+
+.lang li {
+  padding: 0;
+}
+
+.lang li:hover {
+  background: #fff;
+}
+
+.lang li:last-child {
+  -webkit-border-bottom-left-radius: 20px;
+          border-bottom-left-radius: 20px;
+  -webkit-border-bottom-right-radius: 20px;
+          border-bottom-right-radius: 20px;
+}
+
+.borderBottom {
+  -webkit-border-bottom-left-radius: 0;
+          border-bottom-left-radius: 0;
+  -webkit-border-bottom-right-radius: 0;
+          border-bottom-right-radius: 0;
+}
+
+.showLangMenu {
+  opacity: 1;
+  z-index: 10;
+  top: 100%;
+}
+
+.nav {
+  padding: 20px 0;
+}
+
+.nav .logo__img {
+  width: 62px;
+  height: 62px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  -webkit-box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+          box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
+.nav .logo__title {
+  font-size: 20px;
+  font-weight: 700;
+  white-space: nowrap;
+}
+
+.nav .logo__sub-title {
+  font-size: 18px;
+  font-weight: 400;
+  white-space: nowrap;
+}
+
+.nav-list {
+  position: relative;
+}
+
+.nav-list__link {
+  color: white;
+  font-size: 18px;
+  font-weight: 400;
+  text-decoration: none;
+}
+
+.nav-list::before {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  top: 100%;
+  left: 50%;
+  -webkit-transition: .3s all;
+  -o-transition: .3s all;
+  transition: .3s all;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  background: #fff;
+}
+
+.nav-list:hover .nav-list__link {
+  color: #fff;
+}
+
+.nav-list:hover::before {
+  width: 100%;
+}
+
+.nav-list:hover:last-child::before {
+  width: 0;
+}
+
 .mobile-menu {
   position: fixed;
   top: 0;
   left: -100%;
   width: 100%;
   height: 100%;
+  background: #0009;
   -webkit-backdrop-filter: blur(20px);
           backdrop-filter: blur(20px);
   text-align: center;
@@ -853,6 +881,238 @@ p, a {
   padding: 65px 0 40px;
 }
 
+.footer-search {
+  width: 135px;
+  height: 70px;
+  -webkit-border-radius: 50px;
+          border-radius: 50px;
+  border: 1px solid #fff;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 20px;
+}
+
+.footer-search svg {
+  width: 25px;
+}
+
+.footer-search svg path {
+  fill: #fff;
+}
+
+.footer__logo {
+  width: 62px;
+  height: 62px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  -webkit-box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+          box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
+.footer__logo-text {
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.footer .nav-list:hover:last-child::before {
+  width: 100%;
+}
+
+.footer-sub {
+  font-size: 15px;
+}
+
+.footer__link {
+  font-style: 15px;
+  position: relative;
+}
+
+.footer__link::before {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 1px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  top: 100%;
+  left: 50%;
+  -webkit-transition: .3s all;
+  -o-transition: .3s all;
+  transition: .3s all;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  background: #fff;
+}
+
+.footer__link:hover .footer__link__link {
+  color: #fff;
+}
+
+.footer__link:hover::before {
+  width: 100%;
+}
+
+.header-peofile {
+  background-image: url(../../img/png/header-mob.png);
+  height: auto;
+}
+
+.profile {
+  padding: 100px 0 60px;
+  color: #191a40;
+}
+
+.profile-photo {
+  width: 270px;
+  height: 270px;
+  -webkit-border-radius: 60px;
+          border-radius: 60px;
+  -webkit-box-shadow: 2px 4px 15px 0px rgba(255, 121, 121, 0.2);
+          box-shadow: 2px 4px 15px 0px rgba(255, 121, 121, 0.2);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 30px;
+}
+
+.profile-photo-border {
+  width: 214px;
+  height: 214px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  position: relative;
+  background: -webkit-gradient(linear, left top, right top, from(#8e5ae5), to(#d76cd8));
+  background: -webkit-linear-gradient(left, #8e5ae5, #d76cd8);
+  background: -o-linear-gradient(left, #8e5ae5, #d76cd8);
+  background: linear-gradient(to right, #8e5ae5, #d76cd8);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.profile-photo__png {
+  width: 210px;
+  height: 210px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  border: 10px solid #fff;
+  background: #fff;
+}
+
+.profile-login {
+  font-size: 32px;
+  font-weight: 600;
+  margin-right: 45px;
+}
+
+.profile .anonymous-browsing {
+  padding: 5px 15px;
+  background: #43ecd2;
+  -webkit-border-radius: 20px;
+          border-radius: 20px;
+  width: auto;
+  display: inline-block;
+  font-size: 15px;
+}
+
+.profile__name {
+  font-size: 15px;
+  color: #848591;
+  margin: 15px 0 35px;
+}
+
+.profile__info {
+  color: #191a40;
+  font-size: 15px;
+  margin-right: 60px;
+}
+
+.profile__info:last-child {
+  margin-right: 0;
+}
+
+.profile__info:hover {
+  color: #191a40;
+}
+
+.profile__info-title {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.profile-stories__btn, .profile-publications__btn {
+  font-size: 22px;
+  font-weight: 600;
+  color: #848591;
+  cursor: pointer;
+}
+
+.profile .active_btn {
+  color: #191a40;
+  border-bottom: 2px solid #191a40;
+}
+
+.profile-stories-item, .profile-publications-item {
+  margin-top: 30px;
+  -webkit-transition: .3s all;
+  -o-transition: .3s all;
+  transition: .3s all;
+  -webkit-border-radius: 20px;
+          border-radius: 20px;
+}
+
+.profile-stories-item .stories__img, .profile-publications-item .stories__img {
+  width: 100%;
+  height: 480px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  -webkit-border-radius: 20px;
+          border-radius: 20px;
+}
+
+.profile-stories-item:hover, .profile-publications-item:hover {
+  -webkit-transform: translateY(-10px);
+      -ms-transform: translateY(-10px);
+          transform: translateY(-10px);
+  -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+          box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
 @-webkit-keyframes animCub {
   from {
     -webkit-transform: rotate(0);
@@ -927,6 +1187,14 @@ p, a {
         -ms-transform: none;
             transform: none;
   }
+  .advantages .cube1 {
+    top: 85%;
+    right: 80%;
+    -webkit-transition: .3s all;
+    -o-transition: .3s all;
+    transition: .3s all;
+    z-index: -1;
+  }
 }
 
 @media (max-width: 768px) {
@@ -985,6 +1253,67 @@ p, a {
   .popular__title {
     font-size: 40px;
   }
+  .footer {
+    padding: 10px 0 40px 0;
+  }
+  .header-peofile {
+    padding: 0;
+  }
+  .profile {
+    padding: 100px 0 60px;
+    color: #191a40;
+  }
+  .profile-photo {
+    width: 135px;
+    height: 135px;
+    -webkit-border-radius: 40px;
+            border-radius: 40px;
+    -webkit-box-shadow: 2px 4px 10px 0px rgba(255, 121, 121, 0.2);
+            box-shadow: 2px 4px 10px 0px rgba(255, 121, 121, 0.2);
+    margin-right: 15px;
+  }
+  .profile-photo-border {
+    width: 112px;
+    height: 112px;
+  }
+  .profile-photo__png {
+    width: 110px;
+    height: 110px;
+    -webkit-border-radius: 50%;
+            border-radius: 50%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center;
+       object-position: center;
+    border: 5px solid #fff;
+    background: #fff;
+  }
+  .profile-login {
+    margin-right: 0;
+  }
+  .profile .anonymous-browsing {
+    padding: 3px 10px;
+    font-size: 12px;
+  }
+  .profile__name {
+    font-size: 20px;
+    font-weight: 700;
+    color: #848591;
+    margin: 15px 0 35px;
+  }
+  .profile__info {
+    margin-right: 0;
+  }
+  .profile__info:last-child {
+    margin-right: 0;
+  }
+  .profile__info:hover {
+    color: #191a40;
+  }
+  .profile__info-title {
+    font-size: 20px;
+    font-weight: 700;
+  }
 }
 
 @media (max-width: 576px) {
@@ -1017,6 +1346,40 @@ p, a {
   }
   .advantages .ellipse3 .save {
     left: 50%;
+  }
+  .advantages .cube1 {
+    top: 90%;
+    right: 80%;
+    -webkit-transition: .3s all;
+    -o-transition: .3s all;
+    transition: .3s all;
+  }
+  .profile-stories-item, .profile-publications-item {
+    margin-top: 30px;
+    -webkit-transition: .3s all;
+    -o-transition: .3s all;
+    transition: .3s all;
+    -webkit-border-radius: 20px;
+            border-radius: 20px;
+  }
+  .profile-stories-item .stories__img,
+  .profile-stories-item .publications__img, .profile-publications-item .stories__img,
+  .profile-publications-item .publications__img {
+    width: 100%;
+    height: 320px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center;
+       object-position: center;
+    -webkit-border-radius: 20px;
+            border-radius: 20px;
+  }
+  .profile-stories-item:hover, .profile-publications-item:hover {
+    -webkit-transform: translateY(-10px);
+        -ms-transform: translateY(-10px);
+            transform: translateY(-10px);
+    -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+            box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
   }
 }
 
