--- a/assets/style/scss/main.scss
+++ b/assets/style/scss/main.scss
@@ -23,101 +23,14 @@ p, a {
     padding: 0;
     margin: 0;
 }
+a {
+    text-decoration: none;
+}
 .header {
     background-image: url(../../img/png/header-bg.png);
     height: 100vh;
     background-size: cover;
     background-position: center;
-    .nav {
-        padding: 20px 0;
-        .logo {
-            left: -15px;
-        }
-        &-list {
-            position: relative;
-            &__link {
-                color: white;
-                font-size: 18px;
-                font-weight: 400;
-                text-decoration: none;
-            }
-            &::before {
-                content: '';
-                position: absolute;
-                width: 0;
-                height: 2px;
-                border-radius: 50%;
-                top: 100%;
-                left: 50%;
-                transition: .3s all;
-                transform: translateX(-50%);
-                background: #fff;
-            }
-            &:hover::before {
-                width: 100%;
-            }
-            &:hover:last-child::before {
-                width: 0;
-            }
-        }
-        .lang {
-            color: #fff;
-            font-size: 18px;
-            width: 45px;
-            height: 40px;
-            border-radius: 50%;
-            border: 2px solid #fff;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-            transition: .3s all;
-            cursor: pointer;
-            &-menu  {
-                position: absolute;
-                top: 80%;
-                left: -2px;
-                width: 45px;
-                height: auto;
-                z-index: 10;
-                border: 1px solid #fff;
-                text-align: center;
-                margin: 0;
-                border-radius: 40px;
-                border-top-left-radius: 0;
-                border-top-right-radius: 0;
-                border-top: none;
-                overflow: hidden;
-                transition: .3s all;
-                opacity: 0;
-                z-index: -2;
-            }
-            &-item {
-                color: #191a40;
-                text-decoration: none;
-            }
-            li {
-                // padding: 1px 0;
-                padding: 0;
-                &:hover {
-                    background: #fff;
-                }
-                &:last-child {
-                    border-bottom-left-radius: 20px;
-                    border-bottom-right-radius: 20px;
-                }
-            }
-        }
-        .borderBottom {
-            border-bottom-left-radius: 0;
-            border-bottom-right-radius: 0;
-        }
-        .showLangMenu {
-            opacity: 1;
-            z-index: 10;
-            top: 100%;
-        }
-    }
     .menu-burger {
         cursor: pointer;
         position: relative;
@@ -230,13 +143,124 @@ p, a {
         }
       }
 }
-      
+
+.lang {
+    color: #fff;
+    font-size: 18px;
+    min-width: 45px;
+    min-height: 40px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    transition: .3s all;
+    cursor: pointer;
+    &-menu  {
+        position: absolute;
+        top: 80%;
+        left: -2px;
+        width: 45px;
+        height: auto;
+        z-index: 10;
+        border: 1px solid #fff;
+        text-align: center;
+        margin: 0;
+        border-radius: 40px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        border-top: none;
+        overflow: hidden;
+        transition: .3s all;
+        opacity: 0;
+        z-index: -2;
+        box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    }
+    &-item {
+        color: #191a40;
+        text-decoration: none;
+    }
+    li {
+        // padding: 1px 0;
+        padding: 0;
+        &:hover {
+            background: #fff;
+        }
+        &:last-child {
+            border-bottom-left-radius: 20px;
+            border-bottom-right-radius: 20px;
+        }
+    }
+} 
+
+.borderBottom {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.showLangMenu {
+    opacity: 1;
+    z-index: 10;
+    top: 100%;
+} 
+
+.nav {
+    padding: 20px 0;
+    .logo__img {
+        width: 62px;
+        height: 62px;
+        border-radius: 50%;
+        box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    }
+    .logo__title {
+        font-size: 20px;
+        font-weight: 700;
+        white-space: nowrap;
+    }
+    .logo__sub-title {
+        font-size: 18px;
+        font-weight: 400;
+        white-space: nowrap;
+    }
+    &-list {
+        position: relative;
+        &__link {
+            color: white;
+            font-size: 18px;
+            font-weight: 400;
+            text-decoration: none;
+        }
+        &::before {
+            content: '';
+            position: absolute;
+            width: 0;
+            height: 2px;
+            border-radius: 50%;
+            top: 100%;
+            left: 50%;
+            transition: .3s all;
+            transform: translateX(-50%);
+            background: #fff;
+        }
+        &:hover &__link {
+            color: #fff;
+        }
+        &:hover::before {
+            width: 100%;
+        }
+        &:hover:last-child::before {
+            width: 0;
+        }
+    }
+}
+    
 .mobile-menu {
     position: fixed;
     top: 0;
     left: -100%;
-    width: 100%;
+    width: 100%;   
     height: 100%;
+    background: #0009;
     backdrop-filter: blur(20px);
     text-align: center;
     padding: 120px 50px 50px 50px;
@@ -601,9 +625,166 @@ p, a {
     background-size: cover;
     background-position: center;
     padding: 65px 0 40px;
+    &-search {
+        width: 135px;
+        height: 70px;
+        border-radius: 50px;
+        border: 1px solid #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 20px;
+        svg {
+            width: 25px;
+            path {
+                fill: #fff;
+            }
+        }
+    }
+    &__logo {
+        width: 62px;
+        height: 62px;
+        border-radius: 50%;
+        box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    }
+    &__logo-text {
+        font-size: 15px;
+        font-weight: 400;
+    }
+    .nav-list {
+        &:hover:last-child::before {
+            width: 100%;
+        }
+    }
+    &-sub {
+        font-size: 15px;
+    }
+    &__link {
+        font-style: 15px;
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            width: 0;
+            height: 1px;
+            border-radius: 50%;
+            top: 100%;
+            left: 50%;
+            transition: .3s all;
+            transform: translateX(-50%);
+            background: #fff;
+        }
+        &:hover &__link {
+            color: #fff;
+        }
+        &:hover::before {
+            width: 100%;
+        }
+    }
 }
 
 
+// Start profile
+.header-peofile {
+    background-image: url(../../img/png/header-mob.png);
+    height: auto;
+}
+.profile {
+    padding: 100px 0 60px;
+    color: #191a40;
+    &-photo {
+        width: 270px;
+        height: 270px;
+        border-radius: 60px;
+        box-shadow: 2px 4px 15px 0px rgba(255, 121, 121, 0.2);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 30px;
+        &-border {
+            width: 214px;
+            height: 214px;
+            border-radius: 50%;
+            position: relative;
+            background: linear-gradient(to right, #8e5ae5, #d76cd8);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        &__png {
+            width: 210px;
+            height: 210px;
+            border-radius: 50%;
+            object-fit: cover;
+            object-position: center;
+            border: 10px solid #fff;
+            background: #fff;
+        }
+    }
+    &-login {
+        font-size: 32px;
+        font-weight: 600;
+        margin-right: 45px;
+    }
+    .anonymous-browsing {
+        padding: 5px 15px;
+        background: #43ecd2;
+        border-radius: 20px;
+        width: auto;
+        display: inline-block;
+        font-size: 15px;
+    }
+    &__name {
+        font-size: 15px;
+        color: #848591;
+        margin: 15px 0 35px;
+    }
+    &__info {
+        color: #191a40;
+        font-size: 15px;
+        margin-right: 60px;
+        &:last-child {
+            margin-right: 0;
+        }
+        &:hover {
+            color: #191a40;
+        }
+        &-title {
+            font-size: 20px;
+            font-weight: 700;
+        }
+    }
+    &-stories__btn,
+    &-publications__btn {
+        font-size: 22px;
+        font-weight: 600;
+        color: #848591;
+        cursor: pointer;
+    }
+    .active_btn {
+        color: #191a40;
+        border-bottom: 2px solid #191a40;
+    }
+    &-stories,
+    &-publications {
+        &-item {
+            margin-top: 30px;
+            transition: .3s all;
+            border-radius: 20px;
+            .stories__img {
+                width: 100%;
+                height: 480px;
+                object-fit: cover;
+                object-position: center;
+                border-radius: 20px;
+            }
+            &:hover {
+                transform: translateY(-10px);
+                box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+            }
+        }
+    }
+}
 
 
 
